@@ -7,8 +7,6 @@
 #include "oci8.h"
 #include <errno.h>
 
-#ifdef USE_THREAD_LOCAL_ERRHP
-
 #ifndef WIN32
 #include <pthread.h>
 static pthread_attr_t detached_thread_attr;
@@ -81,5 +79,3 @@ int oci8_run_native_thread(void *(*func)(void *), void *arg)
     return rv;
 }
 #endif /* WIN32 */
-
-#endif /* USE_THREAD_LOCAL_ERRHP */
